--- a/assets/css/client-gallery.css
+++ b/assets/css/client-gallery.css
@@ -1,4 +1,4 @@
-/* AlwafaHub Professional Client Gallery - DETRANIUM Style */
+/* AlwafaHub Professional Client Gallery */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;600;700&display=swap');
 
 :root {
